# global-liquidity-credit-tracker

./: .env.example  .gitignore  DESIGN.md  Makefile  PRODUCT.md  Procfile  README.md  app.py  cli.py  glci_logic_math_econ_review.md  global_liquidity_credit_model_plan.md  open.sh  pyproject.toml  render.yaml  requirements.txt  runtime.txt  us_liquidity_credit_model_plan.md
.github/workflows/: ci.yml  update-data.yml
config/: series.yml
docs/: MARKET_FLOWS.md  METHODOLOGY.md  OPERATIONS.md  PROOF.md  SAMPLE_OUTPUT.md  SOURCES.md
frontend/: README.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
notebooks/: glci_eval.py  quickstart.py
scripts/: export_to_json.py  smoke.py  update_data.py
src/: __init__.py  config.py  data_quality.py
src/api/: __init__.py  server.py
src/data_sources/: __init__.py  base.py  bis.py  fred.py  http.py  nyfed.py  occ.py  state_street.py  worldbank.py  yfinance_client.py
src/etl/: __init__.py  fetcher.py  storage.py
src/indicators/: __init__.py  aggregator.py  backtest.py  dynamic_factor.py  factors.py  flows.py  glci.py  live_evaluation.py  risk_metrics.py  sector_rotation.py  transforms.py
state/: glci_vintages.parquet
tests/: conftest.py  test_aggregator.py  test_backtest.py  test_config_integrity.py  test_data_quality.py  test_dynamic_factor.py  test_export.py  test_flows.py  test_glci_integrity.py  test_live_evaluation.py  test_risk_metrics.py  test_sector_rotation.py  test_source_integrity.py  test_storage_snapshots.py  test_transforms.py  test_update_data.py  test_workflows.py
(+879 files in other folders)
